# t1-sistemas-operacionais

./: .gitignore  LICENSE  README.md
BusyWaitMutex/: CMakeLists.txt  main.c  mutex.c  mutex.h  sorted_list.c  utils.c  utils.h
BusyWaitMutex/list/: sorted_list.c  sorted_list.h
BusyWaitMutex/mutex/: lamports_bakery.c  lamports_bakery.h
BusyWaitMutex/stack/: stack.c  stack.h
